feat: add meta tags and images for SEO

--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/sevingu.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sevingu</title>
+		<meta name="description" content="Transform your images into SVG online with ease and for free! Sevingu is your ultimate playground for applying creative and fun effects to your SVGs. Download your creations in seconds!" />
+		<title>Sevingu - Convert Images to SVG Online | Free & Easy Image to SVG Playground</title>
+
+		<!-- favicon -->
+		<link rel="icon" type="image/svg+xml" href="/sevingu.svg" />
+
+		<!-- og -->
+		<meta property="og:title" content="Sevingu - Free & Easy Image to SVG Playground">
+		<meta property="og:description" content="Transform your images into SVG online with ease and for free! Sevingu is your ultimate playground for applying creative and fun effects to your SVGs. Download your creations in seconds!">
+		<meta property="og:image" content="https://www.sevingu.com/sevingu_w.png">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://www.sevingu.com">
+		<meta property="og:locale:alternate" content="ko_KR" />
+
+		<!-- twitter -->
+		<meta name="twitter:card" content="https://www.sevingu.com/preview_img.png">
+		<meta name="twitter:title" content="Sevingu - Free & Easy Image to SVG Playground">
+		<meta name="twitter:description" content="Transform your images into SVG online with ease and for free! Sevingu is your ultimate playground for applying creative and fun effects to your SVGs. Download your creations in seconds!">
+		<meta name="twitter:image" content="https://www.sevingu.com/sevingu_w.png">
 	</head>
 	<body>
 		<div id="root"></div>
